tests/snapshots/options__opt_border_plain.snap
---
source: tests/options.rs
expression: h.buffer_view()
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│  ac                                                                          │"
"│> a                                                                           │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌  2/4──────────────────────────────────────────────────────────────────────0/0┐"
"│> a                                                                           │"
"└──────────────────────────────────────────────────────────────────────────────┘"
